fix overflow issues

--- a/source/_patterns/00-utilities/_variables.scss
+++ b/source/_patterns/00-utilities/_variables.scss
@@ -252,6 +252,7 @@ $large: 81.25rem;
 --border-radius--round: 0.125rem;
 
 /* b. Shadows ----------------------------------------------------------------*/
+--shadow--hard: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.4),0 0.0625rem 0.125rem rgba(0, 0, 0, 0.5);
 --shadow--soft: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.16),
   0 0.1875rem 0.375rem rgba(0, 0, 0, 0.23);
 --shadow--soft--hover: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.12),
