--- a/source/_patterns/01-atoms/text/headings/_headings.scss
+++ b/source/_patterns/01-atoms/text/headings/_headings.scss
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: var(--space--lg) 0 var(--space--md);
+  margin: var(--space--xl) 0 var(--space--xs);
   font-display: fallback;
   line-height: 1.2em;
 
@@ -27,7 +27,7 @@ h6 {
 h1 {
   position: relative;
   display: block;
-  padding-bottom: var(--space--lg);
+  padding-bottom: var(--space--md);
   color: var(--blue--darker--80);
   font-family: var(--font--title);
   font-size: var(--font-size--5xl);
