--- a/source/_patterns/01-atoms/text/paragraphs/_paragraphs.scss
+++ b/source/_patterns/01-atoms/text/paragraphs/_paragraphs.scss
@@ -6,7 +6,7 @@ Atom: Text - Paragraph
 ------------------------------------------------------------------------------*/
 p {
   margin: 0 0 var(--space--md);
-  line-height: 1.5em;
+  line-height: 1.7em;
 
   @media print {
     page-break-inside: avoid;
