--- a/source/_patterns/02-molecules/navigation/main-navigation/_main-navigation.scss
+++ b/source/_patterns/02-molecules/navigation/main-navigation/_main-navigation.scss
@@ -7,7 +7,7 @@ Molecule: Main navigation/ultimenu custom styles
 .main-navigation,
 #block-system-main-menu {
   @include breakpoint($medium) {
-    width: 100vw;
+    width: calc(100vw - var(--space--md));
     height: inherit;
     border-top: none;
   }
